--- a/ns.yaml
+++ b/ns.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   creationTimestamp: null
-  name: ashu-final-app
+  name: rajesh-ns
 spec: {}
 status: {}
