--- a/deploy.yaml
+++ b/deploy.yaml
@@ -19,7 +19,7 @@ spec:
         app: ashu-appweb
     spec:
       containers:
-      - image: dockerashu/ashuweb:sec-check16
+      - image: rajeshcloud4c/ashusec:testversion16
         name: ashuweb
         ports:
         - containerPort: 80
